fix: fixed packages for $app and $mainscreen
-add app package
-add mainscreen package

Previously both modules had "my.company.app" package name, now it's "my.company.app.app" and "my.company.app.mainscreen"

--- a/sources/features/mainscreen/src/main/res/layout/activity_main.xml
+++ b/sources/features/mainscreen/src/main/res/layout/activity_main.xml
@@ -13,6 +13,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:context="my.company.app.MainActivity"/>
+        tools:context="my.company.app.mainscreen.MainActivity"/>
 
 </android.support.constraint.ConstraintLayout>
